@@ -1,6 +1,7 @@
 Changes in 1.2:
 - Fix large file preallocation when not using quick preallocation in some cases (293279)
 - Disable current open file checking, it causes performance issues in some situations
+- Don't use the gcrypt version macro in it's version check (294866)
 
 Changes in 1.2rc1:
 - Make it possible to check data on chunk ranges instead of the entire torrent
